[gd_scene load_steps=18 format=3 uid="uid://4shii817shj1"]

[ext_resource type="Script" path="res://scripts/lvlmenu.gd" id="1_kan73"]
[ext_resource type="Theme" uid="uid://dqmu52ht0y2m8" path="res://assets/ui_n_backgrounds/gui.tres" id="2_36gwk"]
[ext_resource type="Texture2D" uid="uid://c6raibby2sxui" path="res://assets/ui_n_backgrounds/GUI.png" id="3_5wh6u"]
[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="4_v33kj"]
[ext_resource type="Texture2D" uid="uid://d1ihmog37puhg" path="res://assets/sprites/camel_icon.png" id="5_b5fux"]
[ext_resource type="Texture2D" uid="uid://ckilvpgj4v42p" path="res://assets/sprites/date.png" id="6_g2y64"]
[ext_resource type="Texture2D" uid="uid://d336ivumlkn81" path="res://assets/ui_n_backgrounds/desert.jpeg" id="7_0q43t"]
[ext_resource type="FontFile" uid="uid://c53kogtyjwsss" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="7_fs8es"]
[ext_resource type="Texture2D" uid="uid://bhsfnbv7pokjw" path="res://assets/sprites/falcon_icon.png" id="7_gqepq"]
[ext_resource type="Texture2D" uid="uid://bksqj8qruu3mg" path="res://assets/sprites/pearl_frozen.png" id="8_y3drq"]
[ext_resource type="PackedScene" uid="uid://dsyen3g0p575s" path="res://scenes/tolnote.tscn" id="10_wjlnw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gm0kd"]
texture = ExtResource("3_5wh6u")
region_rect = Rect2(145, 81, 46, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xom3c"]
texture = ExtResource("3_5wh6u")
region_rect = Rect2(49, 97, 30, 30)
modulate_color = Color(1, 1, 1, 0.505882)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5vuxx"]
texture = ExtResource("3_5wh6u")
region_rect = Rect2(49, 97, 30, 30)
modulate_color = Color(0.917647, 0.831373, 0.666667, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wyrsi"]
texture = ExtResource("3_5wh6u")
region_rect = Rect2(49, 97, 30, 30)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_epl2p"]
texture = ExtResource("3_5wh6u")
region_rect = Rect2(49, 97, 30, 30)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kue1w"]
content_margin_right = 11.0
bg_color = Color(0.682353, 0.580392, 0.427451, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(-2.7, 3.06)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kan73")

[node name="UpgradesPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 195.0
offset_top = -84.0
offset_right = 555.0
offset_bottom = 178.0
grow_vertical = 2
theme = ExtResource("2_36gwk")

[node name="Upgrades" type="Panel" parent="UpgradesPanel"]
layout_mode = 0
offset_left = 67.0
offset_top = -78.0
offset_right = 278.0
offset_bottom = -22.0
theme_override_styles/panel = SubResource("StyleBoxTexture_gm0kd")

[node name="Label" type="Label" parent="UpgradesPanel/Upgrades"]
layout_mode = 0
offset_left = 51.0
offset_top = 15.0
offset_right = 163.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("4_v33kj")
text = "Upgrades"

[node name="Camel" type="Button" parent="UpgradesPanel"]
layout_mode = 0
offset_left = 67.0
offset_top = 63.0
offset_right = 176.0
offset_bottom = 173.0
theme_override_styles/hover = SubResource("StyleBoxTexture_xom3c")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5vuxx")
theme_override_styles/normal = SubResource("StyleBoxTexture_wyrsi")
icon = ExtResource("5_b5fux")
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="UpgradesPanel/Camel"]
layout_mode = 0
offset_left = -9.0
offset_top = 103.0
offset_right = 25.0
offset_bottom = 135.0
scale = Vector2(1.98, 2.02)
texture = ExtResource("6_g2y64")
expand_mode = 1
stretch_mode = 1

[node name="Label" type="Label" parent="UpgradesPanel/Camel"]
layout_mode = 0
offset_left = 50.0
offset_top = 123.0
offset_right = 90.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 22
text = "15"

[node name="Falcon" type="Button" parent="UpgradesPanel"]
layout_mode = 0
offset_left = 191.0
offset_top = 63.0
offset_right = 300.0
offset_bottom = 173.0
theme_override_styles/hover = SubResource("StyleBoxTexture_xom3c")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5vuxx")
theme_override_styles/normal = SubResource("StyleBoxTexture_wyrsi")
icon = ExtResource("7_gqepq")
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="UpgradesPanel/Falcon"]
layout_mode = 0
offset_left = -9.0
offset_top = 103.0
offset_right = 25.0
offset_bottom = 135.0
scale = Vector2(1.98, 2.02)
texture = ExtResource("6_g2y64")
expand_mode = 1
stretch_mode = 1

[node name="Label" type="Label" parent="UpgradesPanel/Falcon"]
layout_mode = 0
offset_left = 50.0
offset_top = 123.0
offset_right = 90.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 22
text = "30"

[node name="TolNotesPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -493.0
offset_top = -82.0
offset_right = -167.0
offset_bottom = 174.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_epl2p")

[node name="TolNotes" type="Panel" parent="TolNotesPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = -83.0
offset_right = 309.0
offset_bottom = -27.0
theme_override_styles/panel = SubResource("StyleBoxTexture_gm0kd")

[node name="Label" type="Label" parent="TolNotesPanel/TolNotes"]
layout_mode = 0
offset_left = 33.0
offset_top = 15.0
offset_right = 265.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("4_v33kj")
text = "Notes of Tolerance"

[node name="TolNotesNum" type="Label" parent="TolNotesPanel/TolNotes"]
layout_mode = 0
offset_left = 57.0
offset_top = 113.0
offset_right = 259.0
offset_bottom = 136.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("7_fs8es")
text = "x / 5 Collected"

[node name="Pearl1" type="Button" parent="TolNotesPanel"]
layout_mode = 0
offset_left = 61.0
offset_top = 78.0
offset_right = 114.0
offset_bottom = 132.0
disabled = true
icon = ExtResource("8_y3drq")
icon_alignment = 1
expand_icon = true

[node name="Pearl2" type="Button" parent="TolNotesPanel"]
layout_mode = 0
offset_left = 141.0
offset_top = 78.0
offset_right = 194.0
offset_bottom = 132.0
disabled = true
icon = ExtResource("8_y3drq")
icon_alignment = 1
expand_icon = true

[node name="Pearl3" type="Button" parent="TolNotesPanel"]
layout_mode = 0
offset_left = 221.0
offset_top = 78.0
offset_right = 274.0
offset_bottom = 132.0
disabled = true
icon = ExtResource("8_y3drq")
icon_alignment = 1
expand_icon = true

[node name="Pearl4" type="Button" parent="TolNotesPanel"]
layout_mode = 0
offset_left = 101.0
offset_top = 150.0
offset_right = 154.0
offset_bottom = 204.0
disabled = true
icon = ExtResource("8_y3drq")
icon_alignment = 1
expand_icon = true

[node name="Pearl5" type="Button" parent="TolNotesPanel"]
layout_mode = 0
offset_left = 181.0
offset_top = 150.0
offset_right = 234.0
offset_bottom = 204.0
disabled = true
icon = ExtResource("8_y3drq")
icon_alignment = 1
expand_icon = true

[node name="NextLevel" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -96.0
offset_right = 111.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_36gwk")
text = "Next Level"

[node name="Congrats" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -279.0
offset_top = 61.0
offset_right = 279.0
offset_bottom = 116.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("4_v33kj")
theme_override_font_sizes/font_size = 25
text = "Congratulations
Level X Completed!"
horizontal_alignment = 1

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="Background"]
modulate = Color(1, 1, 1, 0.556863)
offset_left = -36.0
offset_top = -216.0
offset_right = 2051.0
offset_bottom = 1143.0
texture = ExtResource("7_0q43t")
expand_mode = 1
stretch_mode = 4

[node name="Score" type="Control" parent="."]
anchors_preset = 0
offset_left = 989.0
offset_top = 77.0
offset_right = 1029.0
offset_bottom = 117.0

[node name="ScoreUI" type="Label" parent="Score"]
layout_mode = 0
offset_left = -55.0
offset_top = -18.0
offset_right = 87.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource("4_v33kj")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_kue1w")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Score"]
layout_mode = 0
offset_left = -58.0
offset_top = -26.0
offset_right = -24.0
offset_bottom = 6.0
scale = Vector2(2.58, 2.58)
texture = ExtResource("6_g2y64")
expand_mode = 1
stretch_mode = 1

[node name="Tolnote" parent="." instance=ExtResource("10_wjlnw")]
visible = false

[connection signal="pressed" from="UpgradesPanel/Camel" to="." method="_on_camel_pressed"]
[connection signal="pressed" from="UpgradesPanel/Falcon" to="." method="_on_falcon_pressed"]
[connection signal="pressed" from="TolNotesPanel/Pearl1" to="." method="_on_pearl_1_pressed"]
[connection signal="pressed" from="TolNotesPanel/Pearl2" to="." method="_on_pearl_2_pressed"]
[connection signal="pressed" from="TolNotesPanel/Pearl3" to="." method="_on_pearl_3_pressed"]
[connection signal="pressed" from="TolNotesPanel/Pearl4" to="." method="_on_pearl_4_pressed"]
[connection signal="pressed" from="TolNotesPanel/Pearl5" to="." method="_on_pearl_5_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_button_pressed"]
